--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="statedropdown-content">
-      <a href="/3digit2CA/3digit.html">California</a>
+      <a href="./3digit2CA/3digit.html">California</a>
       <a href="../3digit2DC/3digit.html">Washington DC</a>
       <!--<a href="../3digit2FL/3digit.html">Florida</a>
 	  <a href="../3digit2GA/3digit.html">Georgia</a>
