--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="#home" class="active">Home</a>
   <a href="#"onclick="document.getElementById('id01').style.display='block'">Log in</a> 
   <a href="../HowTo/howto.html"onclick >How To Use</a>
-  <a href="../Create_Acct/Sign_UpNP2.html">Create Account</a>
+  <a href="./Create_Acct/Sign_UpNP2.html">Create Account</a>
   <!-- <a href="#state">State</a> -->
   <div class="statedropdown">
     <button class="statedropbtn">State
