--- a/Create_Acct/Sign_UpNP2.html
+++ b/Create_Acct/Sign_UpNP2.html
@@ -48,7 +48,7 @@
 	            </optgroup><br></br>						
 			
 		</fieldset>
-		
+		<a href="../index.html">GO TO HOMEPAGE</a><br />
 		<button type="submit">Sign Up</button>
 		
 							
