--- a/Create_Acct/Sign_UpNP2.html
+++ b/Create_Acct/Sign_UpNP2.html
@@ -9,7 +9,7 @@
 				font-family: Arial, Verdana, sans-serif;}
 		</style>-->
 	</head>
-	<body>
+	<body background="Limitless_sky2.gif">
 		<form action="example.php" method="post">
 		<fieldset>
 		<legend>Sign up information</legend>
@@ -48,10 +48,10 @@
 	            </optgroup><br></br>						
 			
 		</fieldset>
-		<a href="../index.html">GO TO HOMEPAGE</a><br />
+		<a href="../index.html">Home Page</a><br />
 		<button type="submit">Sign Up</button>
-		
 							
 		</form>
+
 	</body>
 </html>
