--- a/Create_Acct/Sign_UpNP2.html
+++ b/Create_Acct/Sign_UpNP2.html
@@ -34,18 +34,19 @@
 				<a id="st_view"><label>Prediction Monitor State:</label><select name="st_view"></a>
 				<optgroup label="State">
 				<option value="California">California</option>
-                <option value="Washington DC">Washington DC</option>
-                <option value="Florida">Florida</option>
-                <option value="Georgia">Georgia</option>
-                <option value="Illinois">Illinois</option>
-                <option value="Maryland">Maryland</option>
-                <option value="Michigan">Michigan</option>
-                <option value="New Jersey">New Jersey</option>
-                <option value="New York">New York</option>    
-                <option value="Pennsylvania">Pennsylvania</option>
-                <option value="Virginia">Virginia</option>
+				<option value=""></option>
+                		<option value="Washington DC">Washington DC</option>
+                		<option value="Florida">Florida</option>
+                		<option value="Georgia">Georgia</option>
+                		<option value="Illinois">Illinois</option>
+                		<option value="Maryland">Maryland</option>
+                		<option value="Michigan">Michigan</option>
+                		<option value="New Jersey">New Jersey</option>
+                		<option value="New York">New York</option>    
+                		<option value="Pennsylvania">Pennsylvania</option>
+                		<option value="Virginia">Virginia</option>
 				</select>
-	            </optgroup><br></br>						
+	            		</optgroup><br></br>						
 			
 		</fieldset>
 		<a href="../index.html">Home Page</a><br />
