--- a/Create_Acct/Sign_UpNP2.html
+++ b/Create_Acct/Sign_UpNP2.html
@@ -31,10 +31,10 @@
 				<label for="name" class="title">cell_phone:</label>
 				<input type="text" id="name" name="name" /><br><br>
 				
-				<a id="st_view"><label>Prediction Monitor State:</label><select name="st_view"></a>
+				<a id="st_view"><label>Prediction Monitor State:</label><br><select name="st_view"></a>
 				<optgroup label="State">
+				<option value=""></option>	
 				<option value="California">California</option>
-				<option value=""></option>
                 		<option value="Washington DC">Washington DC</option>
                 		<option value="Florida">Florida</option>
                 		<option value="Georgia">Georgia</option>
