--- a/Create_Acct/Sign_UpNP2.html
+++ b/Create_Acct/Sign_UpNP2.html
@@ -50,7 +50,7 @@
 			
 		</fieldset>
 		
-		<a href="../main/index.html">GO TO HOMEPAGE</a><br />
+		<a href="../index.html">GO TO HOMEPAGE</a><br />
 		
 		<button type="submit">Sign Up</button>
 		
