--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="statedropdown-content">
       <a href="./3digit2CA/3digit.html">California</a>
       <a href="../3digit2DC/3digit.html">Washington DC</a>
-      <!--<a href="../3digit2FL/3digit.html">Florida</a>
-	  <a href="../3digit2GA/3digit.html">Georgia</a>
+      <a href="../WinSize/Winsize.html">Window Size</a>
+      <!--<a href="../3digit2GA/3digit.html">Georgia</a>
       <a href="../3digit2IL/3digit.html">Illinois</a>
       <a href="../3digit2MD/3digit.html">Maryland</a>
       <a href="../3digit2NJ/3digit.html">New Jersey</a>
