--- a/WinSize/Winsize.html
+++ b/WinSize/Winsize.html
@@ -3,6 +3,7 @@
   <head>
     <title>JavaScript &amp; jQuery - Chapter 3: Functions, Methods &amp; Objects - Window Object</title>
     <link rel="stylesheet" href="css/c03.css" />
+    <a href="../index.html">GO TO HOMEPAGE</a><br />
   </head>
   <body>
     <h1>TravelWorthy</h1>
