--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </button>
     <div class="statedropdown-content">
       <a href="./3digit2CA/3digit.html">California</a>
-      <a href="../3digit2DC/3digit.html">Washington DC</a>
-      <a href="../WinSize/Winsize.html">Window Size</a>
+      <a href="./3digit2DC/3digit.html">Washington DC</a>
+      <a href="./WinSize/Winsize.html">Window Size</a>
       <!--<a href="../3digit2GA/3digit.html">Georgia</a>
       <a href="../3digit2IL/3digit.html">Illinois</a>
       <a href="../3digit2MD/3digit.html">Maryland</a>
