--- a/Create_Acct/Sign_UpNP2.html
+++ b/Create_Acct/Sign_UpNP2.html
@@ -50,7 +50,7 @@
 			
 		</fieldset>
 		
-		<a style="font-size:large"href="../main/index.html">Back to homepage</a><br />
+		<a style="font-size:large"href="../index.html">Back to homepage</a><br />
 		
 		<button type="submit" style="width:200px;height:50px;font-size:x-large;font-weight:bold">Sign Up</button>
 		<button type="reset" style="width:200px;height:50px;font-size:x-large;font-weight:bold">Clear</button>
