--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="navbar" id="myTopnav">
   <a href="#home" class="active">Home</a>
   <a href="#"onclick="document.getElementById('id01').style.display='block'">Log in</a> 
-  <a href="../HowTo/howto.html"onclick >How To Use</a>
+  <a href="./HowTo/howto.html"onclick >How To Use</a>
   <a href="./Create_Acct/Sign_UpNP2.html">Create Account</a>
   <!-- <a href="#state">State</a> -->
   <div class="statedropdown">
