--- a/HowTo/howto.html
+++ b/HowTo/howto.html
@@ -12,6 +12,6 @@ document.write('Last modified ' + document.lastModified);
 <p>&copy; 2009-2022 by B Evans Sr.</p>
 <p></p><br />
 <img src="howtouse.png"width="600" height="700"/><img src="JAN_PRDCT_01.jpg"width="300" height="700"/><img src="EXMPL_HITS_01.jpg"width="300" height="700"/>
-<a href="../main/index.html">GO TO HOMEPAGE</a>
+<a href="../index.html">GO TO HOMEPAGE</a>
 </body>
 </html>
