--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </style>
 <link href="css/Scroltxt.css" type="text/css"
   rel="stylesheet" />
+<script language='JavaScript' type='text/JavaScript'> 
+  localStorage.setItem("visitedHome", "true");
+</script>
 </head>
 <body background="Limitless_sky2.gif">
 <h2><a name="hmpg"></a></h2>
