--- a/Create_Acct/Sign_UpNP2.html
+++ b/Create_Acct/Sign_UpNP2.html
@@ -9,6 +9,13 @@
 				font-family: Arial, Verdana, sans-serif;}
 		</style>-->
 	</head>
+	<script language='JavaScript' type='text/JavaScript'>
+// On subsequent pages, check for the existence of the "visitedHome" value in local storage:
+if (!localStorage.getItem("visitedHome")) {
+    // If the value doesn't exist, redirect the user back to the home page:
+    window.location.href = "../index.html";
+}
+</script>
 	<body background="Limitless_sky2.gif">
 		<form action="example.php" method="post">
 		<fieldset>
