--- a/3digit2CA/3digit.html
+++ b/3digit2CA/3digit.html
@@ -10,6 +10,13 @@
 
 </style>
 </head>
+<script language='JavaScript' type='text/JavaScript'>
+// On subsequent pages, check for the existence of the "visitedHome" value in local storage:
+if (!localStorage.getItem("visitedHome")) {
+    // If the value doesn't exist, redirect the user back to the home page:
+    window.location.href = "../index.html";
+}
+</script>  
 <body background="Limitless_sky2.gif">
 <!--<a href="mailto:automatedpowersystems@yahoo.com">Click to continue</a>-->
 <h2><a name="mlymenu"></a></h2>
