--- a/3digit2CA/January.html
+++ b/3digit2CA/January.html
@@ -5,6 +5,13 @@
 <title></title>
 
 </head>
+<script language='JavaScript' type='text/JavaScript'>
+// On subsequent pages, check for the existence of the "visitedHome" value in local storage:
+if (!localStorage.getItem("visitedHome")) {
+    // If the value doesn't exist, redirect the user back to the home page:
+    window.location.href = "../index.html";
+}
+</script>
 <body background="Limitless_sky2.gif">
 <!--january 1 -->
 <h2><a name="jan">January's Hot Picks</a></h2><p>&copy; 2009-2022 by B Evans Sr.</p><br />PREDICTIONS FOR JANUARY************** HITS FOR JANUARY******************************************COLUMN HITS THIS YEAR<br />
