--- a/3digit2CA/3digit.html
+++ b/3digit2CA/3digit.html
@@ -34,7 +34,7 @@ document.write('Last modified ' + document.lastModified);
 <a href="../index.html">GO TO HOMEPAGE</a><br />
 <!--<a href="#jan">January's Hot Picks</a><br />-->
 <a href="January.html">January's Hot Picks</a><br />
-<a href="February.html">February's Hot Picks</a><br />
+<!--<a href="February.html">February's Hot Picks</a><br />
 <a href="March.html">March's Hot Picks</a><br />
 <a href="April.html">April's Hot Picks</a><br />
 <a href="May.html">May's Hot Picks</a><br />
@@ -44,7 +44,7 @@ document.write('Last modified ' + document.lastModified);
 <a href="September.html">September's Hot Picks</a><br />
 <a href="October.html">October's Hot Picks</a><br />
 <a href="November.html">November's Hot Picks</a><br />
-<a href="December.html">December's Hot Picks</a><br />
+<a href="December.html">December's Hot Picks</a><br />-->
 </div>
 <!--january  1 -->
 <!--february 2 -->
