--- a/3digit2CA/January.html
+++ b/3digit2CA/January.html
@@ -8,7 +8,7 @@
 var storedCode = sessionStorage.getItem("entryCode");
 if (!storedCode || storedCode !== randomCode) {
     // If the value doesn't exist or is different, redirect the user back to the home page:
-    window.location.href ="../main/index.html";
+    window.location.href ="../index.html";
 }
 </script>
 </head>
