--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ document.write('Last modified ' + document.lastModified);
 <p></p><br />
 <img src="mplogo.png"width="350" height="200" /><p>&copy; 2009-2022 by B Evans Sr.</p>
 <div id="scroll-container">
-  <div id="scroll-text">Indiana & South Carolina now available, Ohio next month.<div>
+  <div id="scroll-text">Indiana & South Carolina available, Ohio next.<div>
 </div>
 <!--modal login-->
 <h4>
