--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ sessionStorage.setItem("entryCode", randomCode);
   <a href="#"onclick="document.getElementById('id01').style.display='block'">Log in</a> 
   <a href="./HowTo/howto.html"onclick >How To Use</a>
   <a href="./Create_Acct/Sign_UpNP2.html">Create Account</a>
+  <a href="http://www.3digitusa.blogspot.com">Blog</a>
   <!-- <a href="#state">State</a> -->
   <div class="statedropdown">
     <button class="statedropbtn">State
