--- a/Create_Acct/Sign_UpNP2.html
+++ b/Create_Acct/Sign_UpNP2.html
@@ -17,7 +17,7 @@ if (!localStorage.getItem("visitedHome")) {
 }
 </script>
 	<body background="Limitless_sky2.gif">
-		<form action="example.php" method="post">
+		<form action="Sign_UpNP2.php" method="post">
 		<fieldset>
 		<legend>Sign up information</legend>
 			
